# feishu-bot-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
feishu_sdk/: __init__.py  api.py  event.py  webhook.py
tests/: __init__.py  test_api.py  test_event.py  test_utils.py  test_webhook.py
