[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feishu-bot-sdk"
version = "0.1.0"
description = "A simple Python SDK for building Feishu/Lark bots"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
    "flask>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/feishu-bot-sdk"
Repository = "https://github.com/yourusername/feishu-bot-sdk"

[tool.setuptools.packages.find]
where = ["."]
include = ["feishu_sdk*"]