[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feishu-bot-sdk"
version = "0.1.0"
description = "A simple Python SDK for building Feishu/Lark bots"
authors = [{name = "Lianne Lee", email = "liannejoylee@gmail.com"}]
maintainers = [{name = "Month2Month", email = "engineering@month2month.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "feishu",
    "lark",
    "bot",
    "sdk",
    "webhook",
    "messaging",
    "chatbot",
    "bytedance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
    "flask>=2.0.0",
]

[project.optional-dependencies]
async = [
    "httpx>=0.25.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "responses>=0.23.0",
    "respx>=0.20.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/liannejl/feishu-bot-sdk"
Repository = "https://github.com/liannejl/feishu-bot-sdk"
Documentation = "https://github.com/liannejl/feishu-bot-sdk#readme"
Issues = "https://github.com/liannejl/feishu-bot-sdk/issues"
Changelog = "https://github.com/liannejl/feishu-bot-sdk/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["feishu_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
